@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillDetailController {
    - _billDetailRepositories: IBillDetailRepositories
    + GetBillDetailByID(Guid id): Task<IActionResult> 
}

interface IBillDetailRepositories<<interface>>  {
    + GetBillDetailByID(Guid id): Task<BillDetailResponseDTO> 
}

class BillDetailRepositories {
    - _billDetailDAO : BillDetailDAO

    + GetBillDetailByID(Guid id): Task<BillDetailResponseDTO> 

}

class BillDetailDAO {
    - _client: Client
    + GetBillDetailByID(Guid id): Task<BillDetailResponseDTO> 
}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

APIGateway -- BillDetailController
BillDetailController -- IBillDetailRepositories
IBillDetailRepositories <|-- BillDetailRepositories
BillDetailRepositories "1" -- "1..*" BillDetailDAO
BillDetailDAO "1" -- "0..*" BillDetail

@enduml